--- a/shitlist/package.json
+++ b/shitlist/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "bootstrap": "^4.3.1",
     "react": "^16.8.2",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.2",
     "react-icons-kit": "^1.2.1",
     "react-router-dom": "^4.3.1",
