--- a/shitlist/package.json
+++ b/shitlist/package.json
@@ -8,6 +8,7 @@
     "react": "^16.8.2",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.2",
+    "react-icons": "^3.4.0",
     "react-icons-kit": "^1.2.1",
     "react-infinite-loader": "^1.0.3",
     "react-router-dom": "^4.3.1",
